@@ -1,3 +1,9 @@
+Tue Oct  9 17:59:00 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* random.c (rb_random_ulong_limited): new function to return a random
+	  value from 0 upto limit as unsigned long, simillary to
+	  rb_genrand_ulong_limited but with arbitrary RNG object.
+
 Tue Oct  9 17:13:27 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* process.c (rb_execarg_addopt, rb_execarg_run_options): add :uid and
